kubernetes/apps/kguardian/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.perry.cafe/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
spec:
  hostnames:
    - kguardian.perryhuynh.com
  parentRefs:
    - name: envoy-internal
      namespace: networking
  rules:
    - backendRefs:
        - name: kguardian-frontend
          namespace: kguardian
          port: 5173
